# PDFGrammarCheck

./: .gitignore  CMakeLists.txt  LanguageTool-2.8  README.md  export.txt  pdf.txt  result.txt  text.txt
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
src/: CMakeLists.txt  main.cpp  main_glib.cpp  okular-14.12.3
